# GraphicsProcessingProject

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.hpp  DocumentatieGP.docx  Mesh.cpp  Mesh.hpp  Model3D.cpp  Model3D.hpp  Shader.cpp  Shader.hpp  SkyBox.cpp  SkyBox.hpp  Window.cpp  Window.h  main.cpp
martian/: Marvin.mtl
moon/: Moon_2K.mtl
shaders/: basic.frag  basic.vert  skyboxShader.frag
spaceship/: p_96_spacestation_v3.mtl
starship/: StarShip2.mtl
